--- a/style.css
+++ b/style.css
@@ -33,8 +33,15 @@ main {
 }
 .avatar span {
   position: absolute;
-  right: 100px;
-  top: 12px;
+  top: -10px;
+  left: -30px;
+  z-index: 1;
+}
+.avatar > img {
+  width: 10rem;
+  height: 11.5rem;
+  object-fit: cover;
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 h1 {
   font-size: 1.5rem;
