--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@ body {
 body {
   display: grid;
   place-items: center;
+  background-color: black;
 }
 main {
   background: url('./images/background.svg');
   width: 375px;
   height: 812px;
+  box-shadow: 1px 5px 8px 10px gray;
 }
 .container {
   max-width: 250px;
