--- a/style.css
+++ b/style.css
@@ -13,13 +13,12 @@ body {
 body {
   display: grid;
   place-items: center;
-  background-color: black;
 }
 main {
-  background: url('./images/background.svg');
-  width: 375px;
-  height: 812px;
-  box-shadow: 1px 5px 8px 10px gray;
+  background: url(./images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 .container {
   max-width: 250px;
@@ -67,4 +66,21 @@ ul {
   display: flex;
   gap: 0.5rem;
   justify-content: center;
+}
+@media (min-width: 720px) {
+  /* estilos versão tablet */
+}
+
+@media (min-width: 960px) {
+  body {
+    display: grid;
+    place-items: center;
+    background-color: black;
+  }
+  main {
+    background: url('./images/background.svg');
+    width: 375px;
+    height: 812px;
+    box-shadow: 1px 5px 8px 10px gray;
+  }
 }
